writing roll for database

--- a/inventories/servers.yml
+++ b/inventories/servers.yml
@@ -3,3 +3,8 @@ all:
     wordpress:
       hosts:
         192.168.43.107:
+        192.168.43.9:
+        192.1168.43.53:
+    mysql:
+      hosts:
+        192.168.43.121:
