--- a/roles/wordpress/tasks/main.yml
+++ b/roles/wordpress/tasks/main.yml
@@ -2,7 +2,7 @@
 #tasks file for wordpress
   - name: Create wordpress directory
     file:
-      path: /opt/wordpress/docker
+      path: /opt/docker/wordpress
       state: directory
       owner: root
       group: root
@@ -11,7 +11,7 @@
   - name: Create docker-compose file
     copy:
       src: ./docker-compose.yml
-      dest: /opt/wordpress/docker/docker-compose.yml
+      dest: /opt/docker/wordpress/docker-compose.yml
       owner: root
       group: root
       mode: 0644
@@ -19,4 +19,4 @@
   - name: Run docker-compose up -d
     shell: docker-compose up -d
     args:
-      chdir: /opt/wordpress/docker
+      chdir: /opt/docker/wordpress
