add roles/mysql/tasks/main.yml & roles/wordpress/tasks/main.yml files

--- a/roles/wordpress/tasks/main.yml
+++ b/roles/wordpress/tasks/main.yml
@@ -17,9 +17,8 @@
       mode: 0644
 
       
-  - name: create network my_wordpress_network
-    shell: docker network create my_wordpress_network
-
+  - name: create network 
+    command: docker network create my_wordpress_network
 
   - name: Run docker-compose up -d
     shell: docker-compose up -d
