--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -16,9 +16,8 @@
       group: root
       mode: 0644
 
-  - name: create network my_wordpress_network
-    shell: docker network create my_wordpress_network
-
+  - name: create network
+    command: docker network create my_wordpress_network
 
   - name: Run docker-compose up -d
     shell: docker-compose up -d
