--- a/wordpress_role.yml
+++ b/wordpress_role.yml
@@ -1,7 +1,7 @@
 ---
   - name: app server playbook
     hosts: all
-    gather_facts: false
+    gather_facts: true
     remote_user: root
     roles:
       - wordpress 
